--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="video-container">
-        <video autoplay muted loop id="video-background">
+        <video autoplay muted loop playsinline id="video-background">
         <source src="assets/vid/background vid.MP4" type="video/mp4">
       </video>
     </div>
