--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div class="video-container">
         <video autoplay muted loop playsinline id="video-background">
-        <source src="assets/vid/background vid.MP4" type="video/mp4">
+        <source src="assets/vid/Bus PassVid.MP4" type="video/mp4">
       </video>
     </div>
 
